--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,15 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Samuel Sutherland-Dee
+email: ssutherlanddee@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+ Welcome, my name is Samuel Sutherland-Dee and I am currently a student at the University of Bristol.
+ I hope to graduate with a degree in Computer Science and pursue a career in technology, perhaps in America.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://ssutherlanddee.com" # the base hostname & protocol for your site
+twitter_username: SamSDee
+github_username:  SamSutherland-Dee
 
 # Build settings
 markdown: kramdown
